--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
         padding: 30px;
         border-radius: 20px;
         width: 350px;
+        height: calc(100% - 20px);
         text-align: center;
         transform: scale(0.9);
         transition: transform 0.3s ease;
@@ -1445,4 +1446,5 @@
   </body>
 
 </html>
+
 
